<resources>
    <string name="app_name">NewsApplication</string>

    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_url">http://10.0.2.2:8080/</string>

    <string name="labels">Labels</string>
    <string name="text">Text</string>
    <string name="submit">Submit</string>

    <string name="News">News</string>
    <string name="Submit">Submit an article</string>
    <string name="support">Report a bug</string>

</resources>
