<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihai.newsapplication.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/passwordTextField"
            android:layout_alignBottom="@+id/passwordTextField"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:text="@string/password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/usernameTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textextview"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signupButton"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="22dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:onClick="login"
            android:text="@string/signup" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/signupButton"
            android:layout_alignBottom="@+id/signupButton"
            android:layout_alignParentStart="true"
            android:onClick="login"
            android:text="@string/login" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/usernameTextField"
            android:layout_alignBottom="@+id/usernameTextField"
            android:layout_alignStart="@+id/textextview"
            android:text="@string/username"
            android:textSize="24sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/passwordTextField"
            android:layout_below="@+id/signupButton"
            android:layout_marginTop="80dp" />

        <Button
            android:id="@+id/supportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="handleSupportButton"
            android:text="Support" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
