<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihai.newsapplication.activities.AddNewsActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labels"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:text="@string/text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/labelstextview"
            android:layout_marginEnd="73dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:onClick="submit"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/labelstextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:text="@string/labels"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textextview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:inputType="textMultiLine" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
